# Jam-Guild---Social-Network

./: .gitignore  CMakeLists.txt  README.md  social_graph.db-shm  social_graph.db-wal
frontend/: index.html
include/: Comment.h  ContactHandlers.h  ImagePost.h  NetworkStorage.h  Notification.h  Page.h  Post.h  Profile.h  ProfileNotFound.h  SocialNetwork.h  User.h  Utils.h  VerifiedUser.h
include/API/: Router.h
include/Auth/: User.h
include/Content/: Comment.h  Like.h  Notification.h  Post.h
include/Core/: Crypto.h  Database.h  Entity.h  Location.h  Logger.h  TokenService.h  Translation.h  Utils.h
include/Social/: Community.h  Report.h
legacy/LastCodeInClass-BeforeRefactoring/: Pagina.cpp  Pagina.h  Perfil.cpp  Perfil.h  PerfilInexistente.cpp  PerfilInexistente.h  PersistenciaDaRede.cpp  PersistenciaDaRede.h  Pessoa.cpp  Pessoa.h  PessoaVerificada.cpp  PessoaVerificada.h  Postagem.cpp  Postagem.h  RedeSocial.cpp  RedeSocial.h  teste.cpp
legacy/include/: NetworkStorage.h  Post.h  Profile.h  UIHandlers.h
legacy/old/: PersistenciaDaRede.cpp  VerifiedUser.cpp  index.html  teste.cpp
legacy/src/: ContactHandlers.cpp  NetworkStorage.cpp  Notification.cpp  Post.cpp  Profile.cpp  ProfileNotFound.cpp  UIHandlers.cpp  Utils.cpp  adminTools.cpp  main.cpp
src/: Comment.cpp  ContactHandlers.cpp  ImagePost.cpp  NetworkStorage.cpp  Page.cpp  Post.cpp  Profile.cpp  Server.cpp  SocialNetwork.cpp  UIHandlers.cpp  User.cpp  Utils.cpp  VerifiedUser.cpp  main.cpp  teste.cpp  teste_api.cpp
src/API/: Router.cpp
src/Auth/: User.cpp
src/Content/: Comment.cpp  Like.cpp  Notification.cpp  Post.cpp
src/Core/: Crypto.cpp  Database.cpp  Entity.cpp  Location.cpp  Logger.cpp  TokenService.cpp  Translation.cpp  Utils.cpp
src/Social/: Community.cpp  Report.cpp
